<resources>
    <string name="app_name">Lockey</string>
    <string name="title_activity_timeline">timeline</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="only_positive_messages">Only positive messages</string>
    <string name="lockey">Lockey</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
</resources>